--- a/tictactoe/Cargo.toml
+++ b/tictactoe/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1"
 color-eyre = "0.6"
 tabua-engine = { path = "../tabua-engine" }
+tabua-utils = { path = "../tabua-utils" }
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+tokio = { version = "1.19.2", features = ["rt", "macros"] }
+
