--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: check
@@ -28,12 +29,14 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: nightly
           override: true
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: test
@@ -65,6 +68,7 @@ jobs:
           toolchain: nightly
           override: true
       - run: rustup component add clippy
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
