--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
-      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev libappindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: check
@@ -36,7 +36,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
-      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev libappindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: test
@@ -68,7 +68,7 @@ jobs:
           toolchain: nightly
           override: true
       - run: rustup component add clippy
-      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev appindicator3-dev
+      - run: sudo apt install -y libwebkit2gtk-4.0-dev libgtk-3-dev libappindicator3-dev
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
