Feature/tictactoe-ui (#3)
* WIP: TicTacToe UI

* Add dioxus based ui

* remove old ui

* fix warnings

* fix formatting

* add actions dependencies

* flow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ['tabua-engine', "tabua-utils", 'tictactoe']
+members = ['tabua-engine', "tabua-utils", 'tictactoe', 'tictactoe-dioxus']
